Fix mobile overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,6 +18,8 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    max-width: 100%;
 }
 
 body {
@@ -27,6 +29,7 @@ body {
     font-size: 17px;
     line-height: 1.7;
     overflow-x: hidden;
+    max-width: 100%;
 }
 
 a {
